# AndroidSpeech

./: .gitignore  README.md  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/crispasr/androidspeech/: DeviceModelCatalogTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_tts.cpp
app/src/main/java/com/crispasr/androidspeech/core/: Backend.java  ModelCatalog.java  ModelEntry.java  ModelType.java  NativeTtsEngine.java  PcmSynthesisResult.java  TimingInfo.java  TtsSettings.java
app/src/main/java/com/crispasr/androidspeech/tts/: CrispTtsService.java
app/src/main/java/com/crispasr/androidspeech/ui/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/main/res/values-v35/: styles.xml
app/src/main/res/xml/: tts_engine.xml
app/src/test/java/com/crispasr/androidspeech/: ModelTypeTest.java  TimingInfoTest.java
cmake/: host-vulkan-shaders-windows.cmake
scripts/: create-vulkan-avd.ps1  install-debug-avd.ps1  push-models.ps1  run-device-tests.ps1  run-vulkan-avd.ps1
